--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,5 +1,5 @@
 The current knowledge and understanding of the fundamental constituents of matter and occuring interactions between them are summarized in the well-established standard model (SM) of particle physics. The SM which has been introduced in the early 1970's is to date a very successful theory as it was able to predict new particles in the past and is tested to very high precision. Beyond that there are several other fundamental questions unanswered like the origin of dark matter or the unification of coupling constants at a certain scale. One of such theories which goes beyond the standard model and is supposed to provide a solution to such open problems is \textit{supersymmetry} (SUSY). A short introduction to the phenomenology of the standard model as well as supersymmetry can be found in Chapter 1 of this thesis. \\
 In order to address all such questions about tests of the SM and new theories beyond, the CMS experiment located at the Large Hadron Collider (LHC) at CERN~\footnote{\textit{European Organization for Nuclear Research} near Geneva, Suisse} has been build. It is designed to analyse particle collisions delivered by the LHC and is the experiment in whichs context this thesis has been performed. An overview of the technical setup of the CMS experiment as well as the current status of its' operation is given in Chapter 2. The general introduction to the CMS experiment is followed in Chapter 3 by an introduction to the reconstruction of certain objects recorded in the particle collisions as well as dedicated algorithms to identify specific decay processes, like e.g. decays of top-quarks. \\
-As the name already indicates, the LHC is a hadron collider and thus the predominant objects to be measured in the detector are expected to be jets -- the experimental signature of quarks and gluons. Thus it is very important to have a good understanding of these objects as e.g. a precise knowledge of the jet transverse momentum resolution. A measurement of this quantity in data recorded by the CMS experiment at a center-of-mass energy of 8~\tev as well as simulated events is a main topic of this thesis and discussed in detail in Chapter 4. \\
-The detailled knowledge about jets and their resolution can afterwards be exploited in a search for new physics mainly targeting signatures of decays involving supersymmetric particles in events with missing transverse energy and several jets. The main subject of this thesis is here the estimation of background contributions arising from mismeaured jets and the decay of heavy flavour quarks to the decays of interest. An overview of this analysis with special emphasis on the QCD multijet background determination is presented in Chapter 5. \\
-Finally, Chapter 6 summarizes a prospect study for searches for supersymmetry at a center-of-mass energy of 13~\tev which will be most likely the operation energy of the LHC in 2015 when the operation is restartet. The thesis ends with a short summary and outlook.  
+As the name already indicates, the LHC is a hadron collider and thus the predominant objects to be measured in the detector are expected to be jets -- the experimental signature of quarks and gluons. Thus it is very important to have a good understanding of these objects as e.g. a precise knowledge of the jet transverse momentum resolution. This can be measured utilizing events with a momentum balance in the transverse plane, like e.g. $\gamma$ + jet events, $Z$ + jet events or dijet events. A measurement of this quantity using dijet event topologies in data recorded by the CMS experiment at a center-of-mass energy of 8~\tev as well as simulated events is a main topic of this thesis and discussed in detail in Chapter 4. \\
+The detailled knowledge about jets and their resolution can afterwards be exploited in a search for new physics mainly targeting signatures of decays involving supersymmetric particles in events with missing transverse energy and several jets. Such searches are especially sensitive to the production of gluinos and first and second generation squarksin supersymmetric models. The main focus regarding this new physics search lies on the estimation of background contributions arising from mismeaured jets and decays of heavy flavour quarks to the final states of interest. An overview of this analysis which is also based on the full dataset recorded by the CMS experiment at a center-of-mass energy of 8~\tev with special emphasis on the QCD multijet background determination is presented in Chapter 5. \\
+Finally, Chapter 6 summarizes a prospect study for searches for supersymmetry at a center-of-mass energy of 13~\tev which will be most likely the operation energy of the LHC in 2015 when the next running period starts. In this study, it is investigated how the classical approach of the analysis presented in Chapter 5 can be adapted and improved in order to be sensitive not only to gluino and first and second generation squarks but to the direct production of top squarks. Special emphasis lies on the study of specific kinematic variables and the application of jet substructure tools. \\ The thesis ends with a short summary and outlook.  
