--- a/Theory.tex
+++ b/Theory.tex
@@ -131,6 +131,9 @@ As in the SM, the gauge eigenstates of the theory do not necessarily have to be 
 All in all, the MSSM introduces 35 new particles (neglecting mixing in the two first fermion generations) and possesses 124 free parameters of which 18 correspond to SM parameters~\cite{bib:PDG:2012}. 
 \subsection{SUSY-Breaking}
 \label{subsec:susy_breaking}
+As discussed above, SUSY particles are expected to have the same mass as their corresponding SM partner particle. However, none of such particles has been observed so far which implies that supersymmetry in fact must be broken and that sparticles are actually heavier than the SM counterpart. If SUSY is expected to provide a solution to the hierarchy problem, the mass difference should consequently not be too large in order to still allow a cancellation of loop contributions from SM particles to the Higgs mass. The characteristic mass scale should not exceed 1\tev too far~\cite{Martin:1997ns}. \\
+Typically, SUSY breaking is introduced such that so-called \textit{soft breaking} terms are added to the theory in addition to the terms determining the gauge and Yukawa couplings. Since the MSSM does not contain such violating terms, it is extended assuming that the SUSY breaking occurs in a hidden sector which does not couple directly to the visible sector represented by the supermultiplets. Thus, a specific breaking mechanism must be assumed in order to describe the mediation of the supersymmetry breaking from the hidden to the visible sector. \\
+The two most popular breaking scenarios are based on gravity mediation and gauge mediation meachanisms.   
 
 \subsection{Searches for Supersymmetry at Collider Experiments}
 \label{subsec:susy_status}
