--- a/Thesis.tex
+++ b/Thesis.tex
@@ -95,13 +95,16 @@ a4paper
     \thispagestyle{empty}
     \vspace*{1cm}
     \begin{doublespace} 
-      \textbf{\LARGE Measurement of the}\\
-      \textbf{\LARGE Jet Transverse Momentum Resolution}\\
-      \textbf{\LARGE and }\\
-      \textbf{\LARGE Searches for New Physics in Events}\\
-      \textbf{\LARGE with Jets and Missing Transverse Momentum}\\
-      \textbf{\LARGE at the CMS Experiment} \\
-      \vskip1.5cm
+       \textbf{\Huge Natural Supersymmetry on trial} \\
+       \vskip0.4cm
+       \textbf{\Huge at the CMS Experiment}
+%      \textbf{\LARGE Measurement of the}\\
+%      \textbf{\LARGE Jet Transverse Momentum Resolution}\\
+%      \textbf{\LARGE and }\\
+%      \textbf{\LARGE Searches for New Physics in Events}\\
+%      \textbf{\LARGE with Jets and Missing Transverse Momentum}\\
+%      \textbf{\LARGE at the CMS Experiment} \\
+      \vskip2.5cm
       \begin{Large} 
         \textbf{Dissertation\\
           zur Erlangung des Doktorgrades\\
