--- a/Theory.tex
+++ b/Theory.tex
@@ -128,20 +128,36 @@ The smallest possible supersymmetric extension of the SM including the full part
 This extension is minimal in that sense that it introduces the least feasible number of additional particles to the existing SM particles. Thus, each SM fermion gets an individual superpartner while the interactions and couplings of the supersymmetric particles are the same as for the SM counterparts. The different transformation of left- and right-handed fermions under the gauge groups implies the necessity to introduce separate superpartners for left- and right-handed states as well. These are arranged with their bosonic (spin 0) superpartner in a \textit{chiral} supermultiplet. The labels indicating the left- and right-handed states refer to the helicity of the respective SM particle. These supersymmetric partners of fermions are named \textit{sfermions} distinguishing between \textit{sleptons} and \textit{squarks} -- the supersymmetric partners of leptons and quarks. In a similar manner the SM gauge bosons are arranged in \textit{gauge} supermultiplets together with their fermionic (spin 1/2) supersymmetric correspondents. The SUSY partners of the gauge bosons are named \textit{gauginos} so that the superpartners in the gauge supermultiplets are the \textit{gluino}, \textit{wino} and \textit{bino}. The corresponding gaugino mixtures of the neutral wino and the bino are the \textit{photino} and the \textit{zino}. Beyond that, the supersymmetric particle spectrum is extended by another supermultiplet containing the graviton (spin 2) and the respective supersymmetric partner -- the \textit{gravitino} (spin 3/2). \\
 As described in Sec.~\ref{sec:sm}, masses arise in the SM from the concept of spontaneous symmetry breaking implying the existence of the Higgs boson. The supersymmetric partner of the Higgs boson is named \textit{higgsino}. While in the SM one Higgs doublet is sufficient to give mass to all particles, the Higgs sector needs to be extended in the MSSM. Here, two Higgs doublets are introduced where one doublet $H_u$ gives mass to the up-type quarks and the other one $H_d$ to the down-type quarks, respectively. These two doublets have together eight degrees of freedom of which three are needed to give mass to the gauge bosons of the weak interaction as in the SM. This results in five physical Higgs bosons which are the two scalar Higgs particles $h^0, H^0$, the pseudoscalar $A^0$ as well as the charged Higgs bosons $H^{\pm}$. As further consequence there are two vacuum expectation values $v_u$ and $v_d$ present -- each assigned to one Higgs doublet whose ratio $\mathrm{tan} \, \beta = v_u/v_d$ is a free parameter of the model. \\
 As in the SM, the gauge eigenstates of the theory do not necessarily have to be also the mass eigenstates. A mixing occurs especially in the gaugino sector. Here, the neutral components of the bino and wino mix with the neutral higgsinos and form four mass eigenstates -- the \textit{neutralinos} $\tilde{\chi}^0$. Similarly, also the charged gauginos and higgsinos mix to the four \textit{charginos} $\tilde{\chi}^{\pm}$. Furthermore, mixing can also appear in the third squark and slepton generation. \\
-All in all, the MSSM introduces 35 new particles (neglecting mixing in the two first fermion generations) and possesses 124 free parameters of which 18 correspond to SM parameters~\cite{bib:PDG:2012}. 
+All in all, the MSSM introduces 35 new particles when neglecting mixing in the two first fermion generations.
 \subsection{SUSY-Breaking}
 \label{subsec:susy_breaking}
-As discussed above, SUSY particles are expected to have the same mass as their corresponding SM partner particle. However, none of such particles has been observed so far which implies that supersymmetry in fact must be broken and that sparticles are actually heavier than the SM counterpart. If SUSY is expected to provide a solution to the hierarchy problem, the mass difference should consequently not be too large in order to still allow a cancellation of loop contributions from SM particles to the Higgs mass. The characteristic mass scale should not exceed 1\tev too far~\cite{Martin:1997ns}. \\
-Typically, SUSY breaking is introduced such that so-called \textit{soft breaking} terms are added to the theory in addition to the terms determining the gauge and Yukawa couplings. Since the MSSM does not contain such violating terms, it is extended assuming that the SUSY breaking occurs in a hidden sector which does not couple directly to the visible sector represented by the supermultiplets. Thus, a specific breaking mechanism must be assumed in order to describe the mediation of the supersymmetry breaking from the hidden to the visible sector. \\
-The two most popular breaking scenarios are based on gravity mediation and gauge mediation meachanisms.   
+\begin{figure}[!tp]
+  \centering 
+  \begin{tabular}{c}
+    \includegraphics[width=0.7\textwidth]{figures/MSSMrun.png}
+  \end{tabular}
+  \caption{Evolution of scalar and gaugino mass parameters in the MSSM with mSUGRA boundary conditions imposed at $Q_0 = 2 \times 10^{16}$\gev. The parameter $\mu^2 + m^2_{H_{u}}$ runs negative, provoking electroweak symmetry breaking. Taken from~\cite{Martin:1997ns}.}
+  \label{fig:MSSMrun}
+\end{figure}
+As discussed above, SUSY particles are expected to have the same mass as their corresponding SM partner particle. However, none of such particles has been observed so far which implies that supersymmetry in fact must be broken and that sparticles are actually heavier than the SM counterpart. If SUSY is expected to provide a solution to the hierarchy problem, the mass difference should consequently not be too large in order to still allow a cancellation of loop contributions from SM particles to the Higgs mass. The characteristic mass scale should be around 1\tev~\cite{Martin:1997ns}. \\
+Typically, SUSY breaking is introduced such that so-called \textit{soft breaking} terms are added to the theory in addition to the terms determining the gauge and Yukawa couplings. Since the MSSM does not contain such violating terms, it is extended assuming that the SUSY breaking occurs in a hidden sector which does not couple directly to the visible sector represented by the supermultiplets. Thus, a specific breaking mechanism must be assumed in order to describe the mediation of the supersymmetry breaking from the hidden to the visible sector. In total, the MSSM features several new phases, mixing angles and masses which add another 105 free parameters to the already existing parameters of the SM~\cite{Dimopoulos:1995ju}.  \\
+\\
+The two most popular SUSY breaking scenarios are either based on gravity-mediated or gauge-mediated interactions and known as \textit{minimal supergravity} (mSUGRA)~\cite{Chamseddine:1982jx, AlvarezGaume:1983gj} or \textit{constrained MSSM} (CMSSM)~\cite{Kane:1993td, Baer:2002gm} and \textit{gauge-mediated supersymmetry breaking} (GMSB)~\cite{Dine:1981gu, AlvarezGaume:1981wy}. Assuming a specific breaking scenario usually allows to drastically reduce the number of free parameters in the theory and determines the phenomenology of the respective model. In case of mSUGRA/CMSSM the whole model can be described by five parameters which are the common scalar mass $m_0$ and the common mass of the gauginos and higgsinos $m_{1/2}$ at the GUT scale, the common trilinear coupling $A_0$, $\mathrm{tan} \, \beta$ and the sign of the higgsino mass parameter $\mu$. In Fig.~\ref{fig:MSSMrun} the evolution of the corresponding mass parameters and couplings to the electroweak scale are illustrated.  
 
-\subsection{Searches for Supersymmetry at Collider Experiments}
-\label{subsec:susy_status}
-SUSY is easy to search for at colliders. That is why we do it...bla bla bla bla bla
+\section{Searches for Supersymmetry at Collider Experiments}
+\label{sec:susy_status}
+SUSY search strategies
 
-\begin{itemize}
-\item how do we search at colliders?
-\item searches at previous experiments
-\item status: 7 TeV cmssm
-\item cross sections at 8 tev
-\end{itemize}
+\subsection{Searches at pre-LHC Experiments}
+\label{subsec:susy_pre-lhc}
+searches and results HERA, LEP, Tevatron
+
+\subsection{Searches at the LHC}
+\label{subsec:susy_pre-lhc}
+results 7 tev cmssm and simplified models, motivation + challenges hadronic searches
+
+
+
+
+
+
