--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1254,6 +1254,46 @@ author = {}
       SLACcitation   = "%%CITATION = HEP-PH/9709356;%%",
 }
 
+@article{Dimopoulos:1995ju,
+      author         = "Dimopoulos, Savas and Sutter, David W.",
+      title          = "{The Supersymmetric flavor problem}",
+      journal        = "Nucl.Phys.",
+      volume         = "B452",
+      pages          = "496-512",
+      doi            = "10.1016/0550-3213(95)00421-N",
+      year           = "1995",
+      eprint         = "hep-ph/9504415",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SU-ITP-95-9, CERN-TH-95-101",
+      SLACcitation   = "%%CITATION = HEP-PH/9504415;%%",
+}
+
+@article{Chamseddine:1982jx,
+      author         = "Chamseddine, Ali H. and Arnowitt, Richard L. and Nath,
+                        Pran",
+      title          = "{Locally Supersymmetric Grand Unification}",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "49",
+      pages          = "970",
+      doi            = "10.1103/PhysRevLett.49.970",
+      year           = "1982",
+      reportNumber   = "NUB-2559",
+      SLACcitation   = "%%CITATION = PRLTA,49,970;%%",
+}
+
+@article{AlvarezGaume:1983gj,
+      author         = "Alvarez-Gaume, Luis and Polchinski, J. and Wise, Mark B.",
+      title          = "{Minimal Low-Energy Supergravity}",
+      journal        = "Nucl.Phys.",
+      volume         = "B221",
+      pages          = "495",
+      doi            = "10.1016/0550-3213(83)90591-6",
+      year           = "1983",
+      reportNumber   = "HUTP-82-A063-REV, CALT-68-990-REV",
+      SLACcitation   = "%%CITATION = NUPHA,B221,495;%%",
+}
+
 @article{Kane:1993td,
       author         = "Kane, Gordon L. and Kolda, Christopher F. and Roszkowski,
                         Leszek and Wells, James D.",
@@ -1283,6 +1323,31 @@ author = {}
       primaryClass   = "hep-ph",
       reportNumber   = "FSU-HEP-020530, IFUSP-1549-2002, UH-511-1002-02",
       SLACcitation   = "%%CITATION = HEP-PH/0205325;%%",
+}
+
+@article{Dine:1981gu,
+      author         = "Dine, Michael and Fischler, Willy",
+      title          = "{A Phenomenological Model of Particle Physics Based on
+                        Supersymmetry}",
+      journal        = "Phys.Lett.",
+      volume         = "B110",
+      pages          = "227",
+      doi            = "10.1016/0370-2693(82)91241-2",
+      year           = "1982",
+      reportNumber   = "PRINT-82-0029 (IAS,PRINCETON)",
+      SLACcitation   = "%%CITATION = PHLTA,B110,227;%%",
+}
+
+@article{AlvarezGaume:1981wy,
+      author         = "Alvarez-Gaume, Luis and Claudson, Mark and Wise, Mark B.",
+      title          = "{Low-Energy Supersymmetry}",
+      journal        = "Nucl.Phys.",
+      volume         = "B207",
+      pages          = "96",
+      doi            = "10.1016/0550-3213(82)90138-9",
+      year           = "1982",
+      reportNumber   = "HUTP-81-A063",
+      SLACcitation   = "%%CITATION = NUPHA,B207,96;%%",
 }
 
 @article{bib:WessZumino,
