--- a/Theory.tex
+++ b/Theory.tex
@@ -142,7 +142,7 @@ All in all, the MSSM introduces 35 new particles when neglecting mixing in the t
 As discussed above, SUSY particles are expected to have the same mass as their corresponding SM partner particle. However, none of such particles has been observed so far which implies that supersymmetry in fact must be broken and that sparticles are actually heavier than the SM counterpart. If SUSY is expected to provide a solution to the hierarchy problem, the mass difference should consequently not be too large in order to still allow a cancellation of loop contributions from SM particles to the Higgs mass. The characteristic mass scale should be around 1\tev~\cite{Martin:1997ns}. \\
 Typically, SUSY breaking is introduced such that so-called \textit{soft breaking} terms are added to the theory in addition to the terms determining the gauge and Yukawa couplings. Since the MSSM does not contain such violating terms, it is extended assuming that the SUSY breaking occurs in a hidden sector which does not couple directly to the visible sector represented by the supermultiplets. Thus, a specific breaking mechanism must be assumed in order to describe the mediation of the supersymmetry breaking from the hidden to the visible sector. In total, the MSSM features several new phases, mixing angles and masses which add another 105 free parameters to the already existing parameters of the SM~\cite{Dimopoulos:1995ju}.  \\
 \\
-The two most popular SUSY breaking scenarios are either based on gravity-mediated or gauge-mediated interactions and known as \textit{minimal supergravity} (mSUGRA)~\cite{Chamseddine:1982jx, AlvarezGaume:1983gj} or \textit{constrained MSSM} (CMSSM)~\cite{Kane:1993td, Baer:2002gm} and \textit{gauge-mediated supersymmetry breaking} (GMSB)~\cite{Dine:1981gu, AlvarezGaume:1981wy}. Assuming a specific breaking scenario usually allows to drastically reduce the number of free parameters in the theory and determines the phenomenology of the respective model. In case of mSUGRA/CMSSM the whole model can be described by five parameters which are the common scalar mass $m_0$ and the common mass of the gauginos and higgsinos $m_{1/2}$ at the GUT scale, the common trilinear coupling $A_0$, $\mathrm{tan} \, \beta$ and the sign of the higgsino mass parameter $\mu$. In Fig.~\ref{fig:MSSMrun} the evolution of the corresponding mass parameters and couplings to the electroweak scale are illustrated.  
+The two most popular SUSY breaking scenarios are either based on gravity-mediated or gauge-mediated interactions and known as \textit{minimal supergravity} (mSUGRA)~\cite{Chamseddine:1982jx, AlvarezGaume:1983gj} or \textit{constrained MSSM} (CMSSM)~\cite{Kane:1993td, Baer:2002gm} and \textit{gauge-mediated supersymmetry breaking} (GMSB)~\cite{Dine:1981gu, AlvarezGaume:1981wy}. Assuming a specific breaking scenario usually allows to drastically reduce the number of free parameters in the theory and determines the phenomenology of the respective model. In case of mSUGRA/CMSSM the whole model can be described by five parameters which are the common scalar mass $m_0$ and the common mass of the gauginos and higgsinos $m_{1/2}$ at the GUT scale, the common trilinear coupling $A_0$, $\mathrm{tan} \, \beta$ and the sign of the higgsino mass parameter $\mu$. In Fig.~\ref{fig:MSSMrun} the evolution of the corresponding mass parameters to the electroweak scale are illustrated.  
 
 \section{Searches for Supersymmetry at Collider Experiments}
 \label{sec:susy_status}
