--- a/RA2.tex
+++ b/RA2.tex
@@ -1,3 +1,4 @@
+Introduction and motivation with 8 TeV cross section and rate
 \section{Event Selection}
 \label{sec:RA2_sel}
 
@@ -75,5 +76,8 @@
   \caption{Comparison of various exclusion limits derived by different CMS anlayses for the SMS T1tttt. Taken from ... (cms susy public results).}
   \label{fig:T1_comp}
 \end{figure}
+
+\section{Status of natural supersymmetry after LHC Run-I}
+\label{sec:susy_status}
 
 
