--- a/Theory.tex
+++ b/Theory.tex
@@ -144,17 +144,36 @@ Typically, SUSY breaking is introduced such that so-called \textit{soft breaking
 \\
 The two most popular SUSY breaking scenarios are either based on gravity-mediated or gauge-mediated interactions and known as \textit{minimal supergravity} (mSUGRA)~\cite{Chamseddine:1982jx, AlvarezGaume:1983gj} or \textit{constrained MSSM} (CMSSM)~\cite{Kane:1993td, Baer:2002gm} and \textit{gauge-mediated supersymmetry breaking} (GMSB)~\cite{Dine:1981gu, AlvarezGaume:1981wy}. Assuming a specific breaking scenario usually allows to drastically reduce the number of free parameters in the theory and determines the phenomenology of the respective model. In case of mSUGRA/CMSSM the whole model can be described by five parameters which are the common scalar mass $m_0$ and the common mass of the gauginos and higgsinos $m_{1/2}$ at the GUT scale, the common trilinear coupling $A_0$, $\mathrm{tan} \, \beta$ and the sign of the higgsino mass parameter $\mu$. In Fig.~\ref{fig:MSSMrun} the evolution of the corresponding mass parameters to the electroweak scale are illustrated.  
 
-\section{Searches for Supersymmetry at Collider Experiments}
+\section{Searches for Supersymmetry and Current Constraints}
 \label{sec:susy_status}
-SUSY search strategies
+The appealing attributes of supersymmetry which have been discussed above initiated a couple of indirect and direct searches looking for hints of supersymmetric particles. Although no sign for SUSY has been observed in nature so far, several results have been used in order to constrain the allowed parameter space. This section gives a short introduction to general search strategies for supersymmetry with main focus on collider experiments and provides a short overview of the status of experimental results. Results of direct searches at the LHC discussed here are restricted to results from searches performed previous to the analyses presented in this thesis. Further discussion of the status of supersymmetry after LHC Run-I follows in Sec.~\ref{sec:susy_status}.  
 
-\subsection{Searches at pre-LHC Experiments}
-\label{subsec:susy_pre-lhc}
-searches and results HERA, LEP, Tevatron
+\subsection{Constraints from indirect measurements}
+\label{subsec:susy_indirect}
+electroweak precision data, g-2, astrophysical observations, b-physics, CP-violation, FCNC
 
-\subsection{Searches at the LHC}
-\label{subsec:susy_pre-lhc}
-results 7 tev cmssm and simplified models, motivation + challenges hadronic searches
+\subsection{Direct searches at Collider Experiments}
+\label{subsec:susy_collider}
+\begin{figure}[!tp]
+  \centering 
+  \begin{tabular}{cc}
+    \includegraphics[width=0.49\textwidth]{figures/T1_7TeV.pdf} &
+    \includegraphics[width=0.49\textwidth]{figures/T2_7TeV.pdf}
+  \end{tabular}
+  \caption{Interpretation of searches for supersymmetry at the CMS experiment with simplified models in $\tilde{g} \rightarrow qq\tilde{\chi}^0$ (\textit{left}) and $\tilde{q} \rightarrow q \tilde{\chi}^0$ (\textit{right}) topologies. Shown are the 95\% CL exclusion limits on the produced particle and LSP masses. The grey area represents the region where the respective decay mode is forbidden~\cite{Chatrchyan:2013sza}.}
+  \label{fig:SMS_7TeV}
+\end{figure}
+Although the exploitation of indirect searches for supersymmetry is very useful in order to constrain the allowed SUSY parameter space, the most stringent exclusion limits are derived from direct searches at collider experiments. Typically, searches for SUSY at colliders make use of the specific production and decay properties which are caused by the assumption of R-parity conservation. These imply that sparticles are only produced in pairs and decay via cascades into the lightest supersymmetric particle which is often assumed to be the lightest neutralino. This leaves the experiment undetected and manifests in missing energy or missing momentum. Such missing energy signatures are thus a key-feature of searches for supersymmetry in collider experiments. Depending on the type of supersymmetric particle produced the missing energy can be accompanied by several leptons, photons or jets. Usually, searches are classified according to their targeted final state and are aimed at a specific kind of supersymmetric particle. If searches are designed quite generic in order to be sensitive to various types of particles and models, they are called \textit{inclusive} searches. \\  
+Extensive searches resulting in the tightest exclusion limits in the pre-LHC era have been realised by the experiments performed at \hera, \lep and \tevatron:
+\begin{description}
+ \item \textbf{\hera \cite{Aid:1996es, Breitweg:1998gk}}:
+ \item \textbf{\lep \cite{ALEPHSUSY, DELPHISUSY, L3SUSY, OPALSUSY, LEPLimits}}:
+ \item \textbf{\tevatron \cite{CDFLimits, D0Limits, Abazov200934}}:
+\end{description}
+Searches at LHC: gluinos and squarks, third-generation fermions, electroweak production (main focus hadronic searches)
+\\
+\\
+results 7 tev cmssm (cms + atlas including other experiments) and simplified models 
 
 
 
