--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1602,6 +1602,23 @@ URL = {http://www.annualreviews.org/doi/abs/10.1146/annurev-astro-082708-101659}
      SLACcitation  = "%%CITATION = HEP-EX/9605002;%%"
 }
 
+@article{Breitweg:1998gk,
+      author         = "Breitweg, J. and others",
+      title          = "{Search for selectron and squark production in $e^{+} p$
+                        collisions at HERA}",
+      collaboration  = "ZEUS Collaboration",
+      journal        = "Phys.Lett.",
+      volume         = "B434",
+      pages          = "214-230",
+      doi            = "10.1016/S0370-2693(98)00817-X",
+      year           = "1998",
+      eprint         = "hep-ex/9806019",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "DESY-98-069, ANL-HEP-PR-98-88",
+      SLACcitation   = "%%CITATION = HEP-EX/9806019;%%",
+}
+
 @article{Roszkowski:2001sb,
       author         = "Roszkowski, Leszek and Ruiz de Austri, Roberto and Nihei,
                         Takeshi",
@@ -1780,7 +1797,23 @@ author = "John Ellis and J.S. Hagelin and D.V. Nanopoulos and K. Olive and M. Sr
       SLACcitation   = "%%CITATION = ARXIV:1104.2549;%%",
 }
 
-
+@article{Chatrchyan:2013sza,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Interpretation of Searches for Supersymmetry with
+                        simplified Models}",
+      collaboration  = "CMS Collaboration",
+      journal        = "Phys.Rev.",
+      number         = "5",
+      volume         = "D88",
+      pages          = "052017",
+      doi            = "10.1103/PhysRevD.88.052017",
+      year           = "2013",
+      eprint         = "1301.2175",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-SUS-11-016, CERN-PH-EP-2012-351",
+      SLACcitation   = "%%CITATION = ARXIV:1301.2175;%%",
+}
 
 % --- Indirect searches for new physics -------------------
 @Article{Chen:2001fja,
