--- a/Theory.tex
+++ b/Theory.tex
@@ -148,11 +148,11 @@ The two most popular SUSY breaking scenarios are either based on gravity-mediate
 \label{sec:susy_status}
 The appealing attributes of supersymmetry which have been discussed above initiated a couple of indirect and direct searches looking for hints of supersymmetric particles. Although no sign for SUSY has been observed in nature so far, several results have been used in order to constrain the allowed parameter space. This section gives a short introduction to general search strategies for supersymmetry with main focus on collider experiments and provides a short overview of the status of experimental results. Results of direct searches at the LHC discussed here are restricted to results from searches performed previous to the analyses presented in this thesis. Further discussion of the status of supersymmetry after LHC Run-I follows in Sec.~\ref{sec:susy_status}.  
 
-\subsection{Constraints from indirect measurements}
+\subsection{Constraints from Indirect Measurements}
 \label{subsec:susy_indirect}
 electroweak precision data, g-2, astrophysical observations, b-physics, CP-violation, FCNC
 
-\subsection{Direct searches at Collider Experiments}
+\subsection{Direct Searches at Collider Experiments}
 \label{subsec:susy_collider}
 \begin{figure}[!tp]
   \centering 
