--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1473,7 +1473,7 @@ doi = {10.1146/annurev-astro-082708-101659},
 URL = {http://www.annualreviews.org/doi/abs/10.1146/annurev-astro-082708-101659},
 }
 
-@Article{CDFLimits,
+@Article{CDFLimits_old,
 	author = "{CDF Collaboration, Altonen et al.}",
 	title = "{The CDF exclusion region in the $m_{1/2}$ vs. $m_{0}$ plane}",
 	journal = "Phys. Rev. Lett",
@@ -1481,7 +1481,24 @@ URL = {http://www.annualreviews.org/doi/abs/10.1146/annurev-astro-082708-101659}
 	pages="121801",
 	year="2009",
 	archivePrefix="arXiv",
-	eprint="011.2512"
+	eprint="0811.2512"
+}
+
+@article{CDFLimits,
+      author         = "Aaltonen, T. and others",
+      title          = "{Inclusive Search for Squark and Gluino Production in
+                        $p\bar{p}$ Collisions at $\sqrt{s}$ = 1.96-TeV}",
+      collaboration  = "CDF Collaboration",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "102",
+      pages          = "121801",
+      doi            = "10.1103/PhysRevLett.102.121801",
+      year           = "2009",
+      eprint         = "0811.2512",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-08-526-E",
+      SLACcitation   = "%%CITATION = ARXIV:0811.2512;%%",
 }
 
 @Article{D0Limits,
@@ -1493,6 +1510,19 @@ URL = {http://www.annualreviews.org/doi/abs/10.1146/annurev-astro-082708-101659}
 	year="2008",
 	archivePrefix="arXiv",
 	eprint="0712.3805"
+}
+
+@article{deJong:2012zt,
+      author         = "de Jong, Paul",
+      title          = "{Supersymmetry searches at the LHC}",
+      collaboration  = "ATLAS Collaborations, CMS Collaborations",
+      pages          = "241-254",
+      year           = "2012",
+      eprint         = "1211.3887",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "ATL-PHYS-PROC-2012-244",
+      SLACcitation   = "%%CITATION = ARXIV:1211.3887;%%",
 }
 
 @article{Abazov200934,
