--- a/Theory.tex
+++ b/Theory.tex
@@ -127,8 +127,8 @@ The smallest possible supersymmetric extension of the SM including the full part
 \end{table}
 This extension is minimal in that sense that it introduces the least feasible number of additional particles to the existing SM particles. Thus, each SM fermion gets an individual superpartner while the interactions and couplings of the supersymmetric particles are the same as for the SM counterparts. The different transformation of left- and right-handed fermions under the gauge groups implies the necessity to introduce separate superpartners for left- and right-handed states as well. These are arranged with their bosonic (spin 0) superpartner in a \textit{chiral} supermultiplet. The labels indicating the left- and right-handed states refer to the helicity of the respective SM particle. These supersymmetric partners of fermions are named \textit{sfermions} distinguishing between \textit{sleptons} and \textit{squarks} -- the supersymmetric partners of leptons and quarks. In a similar manner the SM gauge bosons are arranged in \textit{gauge} supermultiplets together with their fermionic (spin 1/2) supersymmetric correspondents. The SUSY partners of the gauge bosons are named \textit{gauginos} so that the superpartners in the gauge supermultiplets are the \textit{gluino}, \textit{wino} and \textit{bino}. The corresponding gaugino mixtures of the neutral wino and the bino are the \textit{photino} and the \textit{zino}. Beyond that, the supersymmetric particle spectrum is extended by another supermultiplet containing the graviton (spin 2) and the respective supersymmetric partner -- the \textit{gravitino} (spin 3/2). \\
 As described in Sec.~\ref{sec:sm}, masses arise in the SM from the concept of spontaneous symmetry breaking implying the existence of the Higgs boson. The supersymmetric partner of the Higgs boson is named \textit{higgsino}. While in the SM one Higgs doublet is sufficient to give mass to all particles, the Higgs sector needs to be extended in the MSSM. Here, two Higgs doublets are introduced where one doublet $H_u$ gives mass to the up-type quarks and the other one $H_d$ to the down-type quarks, respectively. These two doublets have together eight degrees of freedom of which three are needed to give mass to the gauge bosons of the weak interaction as in the SM. This results in five physical Higgs bosons which are the two scalar Higgs particles $h^0, H^0$, the pseudoscalar $A^0$ as well as the charged Higgs bosons $H^{\pm}$. As further consequence there are two vacuum expectation values $v_u$ and $v_d$ present -- each assigned to one Higgs doublet whose ratio $\mathrm{tan} \, \beta = v_u/v_d$ is a free parameter of the model. \\
-As in the SM, the gauge eigenstates of the theory do not necessarily have to be also the mass eigenstates. A mixing occurs especially in the gaugino sector. Here, the neutral components of the bino and wino mix with the neutral higgsinos and form four mass eigenstates -- the \textit{neutralinos} $\tilde{\chi}^0$. Similarly, also the charged gauginos and higgsinos mix to the four \textit{charginos} $\tilde{\chi}^{\pm}$. Furthermore, mixing can also appear in the third squark and slepton generation. \\
-All in all, the MSSM introduces 35 new particles when neglecting mixing in the two first fermion generations.
+As in the SM, the gauge eigenstates of the theory do not necessarily have to be also the mass eigenstates. A mixing occurs especially in the gaugino sector. Here, the neutral components of the bino and wino mix with the neutral higgsinos and form four mass eigenstates -- the \textit{neutralinos} $\tilde{\chi}^0$. Similarly, also the charged gauginos and higgsinos mix to the four \textit{charginos} $\tilde{\chi}^{\pm}$. Furthermore, mixing can also appear in the third squark and slepton generation. The mixing is supposed to be significant only for fermions of the third generation as the off-diagonal elements of the sfermion mass matrix are proportional to the mass of the respective SM partner. 
+
 \subsection{SUSY-Breaking}
 \label{subsec:susy_breaking}
 \begin{figure}[!tp]
@@ -146,7 +146,7 @@ The two most popular SUSY breaking scenarios are either based on gravity-mediate
 
 \section{Searches for Supersymmetry and Current Constraints}
 \label{sec:susy_status}
-The appealing attributes of supersymmetry which have been discussed above initiated a couple of indirect and direct searches looking for hints of supersymmetric particles. Although no sign for SUSY has been observed in nature so far, several results have been used in order to constrain the allowed parameter space. This section gives a short introduction to general search strategies for supersymmetry with main focus on collider experiments and provides a short overview of the status of experimental results. Results of direct searches at the LHC discussed here are restricted to results from searches performed previous to the analyses presented in this thesis. Further discussion of the status of supersymmetry after LHC Run-I follows in Sec.~\ref{sec:susy_status}.  
+The appealing attributes of supersymmetry which have been discussed above initiated a couple of indirect and direct searches looking for hints of supersymmetric particles. Although no sign for SUSY has been observed in nature so far, several results have been used in order to constrain the allowed parameter space. This section gives a short introduction to general search strategies for supersymmetry with main focus on collider experiments and provides a short overview of the status of experimental results. Results of direct searches at the LHC discussed here are restricted to results from searches performed previous to the analysis presented in this thesis. Further discussion of the status of supersymmetry after LHC Run-I follows in Sec.~\ref{sec:susy_status}.  
 
 \subsection{Constraints from Indirect Measurements}
 \label{subsec:susy_indirect}
@@ -154,6 +154,21 @@ electroweak precision data, g-2, astrophysical observations, b-physics, CP-viola
 
 \subsection{Direct Searches at Collider Experiments}
 \label{subsec:susy_collider}
+Although the exploitation of indirect searches for supersymmetry is very useful in order to constrain the allowed SUSY parameter space, the most stringent exclusion limits are derived from direct searches at collider experiments. Typically, searches for SUSY at colliders make use of the specific production and decay properties which are caused by the assumption of R-parity conservation. These imply that sparticles are only produced in pairs and decay via cascades into the lightest supersymmetric particle which is often assumed to be the lightest neutralino. This leaves the experiment undetected and manifests in missing energy or missing momentum. Such missing energy signatures are thus a key-feature of searches for supersymmetry in collider experiments. Depending on the type of supersymmetric particle produced the missing energy can be accompanied by several leptons, photons or jets. Usually, searches are classified according to their targeted final state and are aimed at a specific kind of supersymmetric particle. If searches are designed quite generic in order to be sensitive to various types of particles and models, they are called \textit{inclusive} searches. \\  
+Extensive searches resulting in the tightest exclusion limits in the pre-LHC era have been realised by the experiments performed at \hera, \lep and \tevatron:
+\begin{description}
+ \item \textbf{\hera \cite{Aid:1996es, Breitweg:1998gk}}: At \hera searches for R-parity conserving supersymmetric models have been mainly targeting processes involving the production of a selectron and a squark. The dominant MSSM process at \hera is the production of a selectron and a squark via the exchange of a neutralino where $\tilde{e}$ and $\tilde{q}$ subsequently decay into any lighter gaugino and their respective SM partner. Thus, a distinct experimental signature is given by an electron, hadrons and missing energy and momentum. Since no excess over the SM expectation has been observed, exclusion limits for the masses of the selectron and squark in the context of the MSSM have been derived. Depending on the specific choices made to contrain the MSSM parameter space, the excluded region extends to $\approx 60 - 70$ \gev for squark masses and $\approx 40$ \gev for the LSP mass. 
+ \item \textbf{\lep \cite{ALEPHSUSY, DELPHISUSY, L3SUSY, OPALSUSY, LEPLimits}}: At \lep various searches for supersymmetry have been performed targeting different species of supersymmetric particles. Scalar leptons and quarks are mainly pair-produced in the s-channel via $\gamma$ or $Z$ exchange. In case of selectrons also the t-channel exchange of neutralinos yields important contributions. The typical energy scale at \lep results in decays into the respective SM partner particles -- except for the scalar top -- and the lightest neutralino while also cascade decays are possible. Typical final states contain missing energy and a pair of acoplanar leptons or jets where the direction of one of the leptons/jets is not in the plane defined by the direction of the second lepton/jet and the beam direction. Similarly, neutrinos and charginos are expected to be pair-produced via $Z$ and $Z/\gamma$ s-channel exchange or t-channel selectron or sneutrino exchange, respectively. Typically, the lightest neutralino and fermion pairs are the final decay products of such events. Hence, the final state in case of chargino production is characterized by missing energy accompanied by four jets, two jets and one lepton or only leptons depending on the specific decay mode of the chargino while the most important signature for neutralino production are acoplanar pairs of jets or leptons coming along with large missing momentum. However, the exact decay topologies strongly depend on the particular mass spectrum of the supersymmetric particles so that the above mentioned topologies could also be accompanied by photons or manifest in multiple jets or leptons in cascade decays. Interpretations of combined results from all four experiments in the mSUGRA model lead to exclusion limits showing that $m_{1/2}$ has to be greater than $\approx 100 - 200$~\gev over a wide range of $m_{0}$ up to the~\tev-region for specific fixed other parameters. The lower limit on the LSP mass is found to be around 50~\gev nearly independent of other model constraints. 
+ \item \textbf{\tevatron \cite{CDFLimits, D0Limits, Abazov200934}}: The \tevatron accelerator was the best place to search for supersymmetry before the actual start of the LHC, as the center of mass energy exceeded that of \hera and \lep by several orders of magnitude. Since sparticles are expected to be heavy, thus a rich program of supersymmetric searches was enabled covering various final states of different lepton, photon or jet multiplicities. Of special interest is the search for colored sparticles like squarks and gluinos, as \tevatron is a hadron collider. Squarks are expected to decay preferrably into a quark and the LSP, if they are heavier than the gluinos, resulting in an acoplanar-jet topology with missing transverse momentum. If gluinos are lighter than squarks, they will predominantly decay into a quark pair and the LSP producing a multijet final state accompanied by missing transverse momentum. Thus, searches for squarks and gluinos at \tevatron have been performed exploiting multijet and missing momentum final states. Results have been interpreted in the context of mSUGRA and extended the LEP results in the parameter region of $m_{0} = 70 - 300$ \gev and $m_{1/2} = 125 - 165$~\gev. Thus, gluinos below $\approx 280-300$~\gev for all squark masses and squarks below $380$~\gev independent of the gluino mass could be excluded. 
+\end{description}
+\begin{figure}[!tp]
+  \centering 
+  \begin{tabular}{cc}
+    \includegraphics[width=0.7\textwidth]{figures/CMS_CMSSM.png} 
+  \end{tabular}
+  \caption{Interpretation of searches for supersymmetry at the CMS experiment within the CMSSM. Shown are the 95\% CL exclusion limits in the $m_0$ and $m_{1/2}$ plane for various searches performed using different final state topologies~\cite{deJong:2012zt}.}
+  \label{fig:CMSSM_7TeV}
+\end{figure}
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{cc}
@@ -163,13 +178,6 @@ electroweak precision data, g-2, astrophysical observations, b-physics, CP-viola
   \caption{Interpretation of searches for supersymmetry at the CMS experiment with simplified models in $\tilde{g} \rightarrow qq\tilde{\chi}^0$ (\textit{left}) and $\tilde{q} \rightarrow q \tilde{\chi}^0$ (\textit{right}) topologies. Shown are the 95\% CL exclusion limits on the produced particle and LSP masses. The grey area represents the region where the respective decay mode is forbidden~\cite{Chatrchyan:2013sza}.}
   \label{fig:SMS_7TeV}
 \end{figure}
-Although the exploitation of indirect searches for supersymmetry is very useful in order to constrain the allowed SUSY parameter space, the most stringent exclusion limits are derived from direct searches at collider experiments. Typically, searches for SUSY at colliders make use of the specific production and decay properties which are caused by the assumption of R-parity conservation. These imply that sparticles are only produced in pairs and decay via cascades into the lightest supersymmetric particle which is often assumed to be the lightest neutralino. This leaves the experiment undetected and manifests in missing energy or missing momentum. Such missing energy signatures are thus a key-feature of searches for supersymmetry in collider experiments. Depending on the type of supersymmetric particle produced the missing energy can be accompanied by several leptons, photons or jets. Usually, searches are classified according to their targeted final state and are aimed at a specific kind of supersymmetric particle. If searches are designed quite generic in order to be sensitive to various types of particles and models, they are called \textit{inclusive} searches. \\  
-Extensive searches resulting in the tightest exclusion limits in the pre-LHC era have been realised by the experiments performed at \hera, \lep and \tevatron:
-\begin{description}
- \item \textbf{\hera \cite{Aid:1996es, Breitweg:1998gk}}:
- \item \textbf{\lep \cite{ALEPHSUSY, DELPHISUSY, L3SUSY, OPALSUSY, LEPLimits}}:
- \item \textbf{\tevatron \cite{CDFLimits, D0Limits, Abazov200934}}:
-\end{description}
 Searches at LHC: gluinos and squarks, third-generation fermions, electroweak production (main focus hadronic searches)
 \\
 \\
